--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p>使命：幫助客戶在競爭中脫穎而出，實現業務增長。</p>
                 </div>
                 <div class="about-image">
-                    <img src="imgs/images.jpg" alt="洪家佑照片">
+                    <img src="imgs/Become a lava warrior_A1.jpg" alt="洪家佑照片">
                 </div>
             </div>
         </div>
@@ -62,13 +62,13 @@
                     <img src="imgs/social.jpg" alt="社交媒體管理">
                     <h3>社交媒體管理</h3>
                     <p>提升品牌曝光率</p>
-                    <a href="#contact" class="button">查看詳情</a>
+                    <a href="social-media.html" class="button">觀看影片</a>
                 </div>
                 <div class="product-card">
                     <img src="imgs/content.jpg" alt="內容創作">
                     <h3>內容創作</h3>
                     <p>打造吸引人的品牌故事</p>
-                    <a href="#contact" class="button">查看詳情</a>
+                    <a href="content-creation.html" class="button">查看作品集</a>
                 </div>
             </div>
         </div>
